font color fix flat theme looper combobox

--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -205,3 +205,8 @@ LooperWindow QGroupBox
 {
     background-color: white;
 }
+
+#widgetBottom QComboBox QAbstractItemView
+{
+    selection-color: black;
+}
