--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -200,3 +200,13 @@ LooperWindow QGroupBox
 {
     border: 1px solid rgba(0, 0, 0, 30);
 }
+
+#widgetBottom QComboBox
+{
+    background-color: white;
+}
+
+#widgetBottom QComboBox QAbstractItemView
+{
+    selection-color: black;
+}
