fixng color for disable qlabel all themes

--- a/src/resources/css/themes/Navy_nm/Dialogs.css
+++ b/src/resources/css/themes/Navy_nm/Dialogs.css
@@ -9,3 +9,12 @@ QDialog QRadioButton
 {
     color: rgb(170, 170, 170);
 }
+
+PreferencesDialog QComboBox:disabled,
+PreferencesDialog QLabel:disabled,
+PreferencesDialog QGroupBox#groupBoxBuiltInMetronomes[checked=false],
+PreferencesDialog QGroupBox#groupBoxCustomMetronome[checked=false],
+PreferencesDialog QGroupBox#groupBoxOutputs
+{
+    color: rgba(0, 0, 0, 90);
+}
