impoving color match for flat theme comboboxes

--- a/src/resources/css/themes/Flat/General.css
+++ b/src/resources/css/themes/Flat/General.css
@@ -272,9 +272,12 @@ AudioMeter#masterMeter
 QComboBox
 {
     background-color: white;
+    selection-color: black;
+    selection-background-color: #3399FF;
 }
 
 QComboBox QAbstractItemView
 {
-    selection-color: black;
+    border: 1px solid transparent;
+    background-color: white;
 }
