:gem: Allowing images, fonts and icon 'tint' for each theme
- Allowing images in themes using relative paths

- Allowing 'per theme' custom colors in MapWidget

- Allowing external fonts in each theme

- Adding code to tint icons (nice to match theme colors)

--- a/src/Common/gui/MetronomePanel.ui
+++ b/src/Common/gui/MetronomePanel.ui
@@ -54,7 +54,7 @@
       <number>1</number>
      </property>
      <item>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="labelLowVolume">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
          <horstretch>0</horstretch>
@@ -104,7 +104,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="labelHighVolume">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
          <horstretch>0</horstretch>
