--- a/src/resources/css/themes/Black_nm/PublicRooms.css
+++ b/src/resources/css/themes/Black_nm/PublicRooms.css
@@ -68,3 +68,11 @@ WavePeakPanel
     /* color used to draw the loading circle */
     qproperty-loadingColor: rgb(90, 90, 90);
 }
+
+MapWidget
+{
+    qproperty-markerTextBackgroundColor: rgba(255, 255, 255, 120);
+    qproperty-markerColor: white;
+    qproperty-markerTextColor: black;
+    qproperty-markerLineConnectorColor: rgba(255, 255, 255, 120);
+}
