--- a/src/resources/css/common/General.css
+++ b/src/resources/css/common/General.css
@@ -135,3 +135,8 @@ QTabBar::close-button {
 QTabBar::close-button:hover {
     background: rgba(255, 255, 255, 30);
 }
+
+WavePeakPanel
+{
+    qproperty-peaksColor: red;
+}
