--- a/src/resources/css/themes/Navy_nm/PublicRooms.css
+++ b/src/resources/css/themes/Navy_nm/PublicRooms.css
@@ -78,3 +78,11 @@ WavePeakPanel
     /* color used to draw the loading circle */
     qproperty-loadingColor: #5A728A;
 }
+
+MapWidget
+{
+    qproperty-markerTextBackgroundColor: rgba(255, 255, 255, 120);
+    qproperty-markerColor: white;
+    qproperty-markerTextColor: black;
+    qproperty-markerLineConnectorColor: rgba(255, 255, 255, 120);
+}
