:bug: Fixing small receive button in Game theme (fix #974)
- Fixing black background in tracks when using no theme
- Fixing local track buttons max width
- Fixing buttons max width in ninjamTrack
- Fixing metronome panel max buttons size
- Improving meters min size

--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -45,7 +45,7 @@ NinjamTrackView[horizontal="true"] QPushButton#receiveButton:checked,
 NinjamTrackView QPushButton#lowCutButton:hover:checked,
 NinjamTrackView QPushButton#receiveButton:checked
 {
-    margin-top: -1px;
+    /*margin-top: -1px;*/
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(100, 100, 100), stop:1 rgb(80, 80, 80));
     color: rgba(0, 0, 0, 160);
     border: none;
