--- a/src/resources/css/themes/Black_nm/BaseTrack.css
+++ b/src/resources/css/themes/Black_nm/BaseTrack.css
@@ -9,8 +9,6 @@
 {
     font-size: 9px;
     border-color: rgb(20 ,20 ,20);
-    padding: 2px;
-
 }
 
 #buttonBoost,
@@ -22,49 +20,17 @@
 }
 
 
-#buttonBoost
+BoostSpinBox
 {
-   padding: 1px;
-   padding-top: 3px;
-   padding-bottom: 3px;
    border-radius: 1px;
-}
+   /*padding: -1px; /* necessary to fix the border padding */
 
-#buttonBoost:disabled
-{
-    color: rgba(0, 0, 0, 100);
-}
-
-#buttonBoost:checked
-{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(100, 100, 100), stop:1 rgb(80, 80, 80));
-    color: rgba(0, 0, 0, 160);
-    border-radius: 0px;
-    border-color: rgb(20, 20, 20);
-}
-
-#buttonBoost:hover
-{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
-    color: rgb(80, 80, 80);
-    border-radius: 0px;
-    border-color: rgb(40, 40, 40);
-}
-
-#buttonBoost:hover:checked
-{
-    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(120, 120, 120), stop:1 rgb(80, 80, 80));
-    color: rgb(40, 40, 40);
-    border-radius: 0px;
-    border-color: rgb(20, 20, 20)
 }
 
 QPushButton#buttonStereoInversion
 {
     background-repeat: none;
     background-position: center center;
-    max-width: 8px;
-    max-height: 12px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(140, 140, 140), stop:1 rgb(120, 120, 120));
 }
 
@@ -100,14 +66,6 @@ BaseTrackView[unlighted="true"] #buttonBoost:checked
     color: rgb(180, 180, 180);
 }
 
-/*#buttonBoostZero:buttonStereoInversion
-{
-    border-bottom: none;
-    border-top: none;
-    border-style: solid;
-    border-color: rgb(20, 20, 20);
-}*/
-
 #soloButton:checked
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(20, 180, 20), stop:1 rgb(0, 80, 0));
@@ -122,7 +80,7 @@ BaseTrackView[unlighted="true"] #buttonBoost:checked
 
 #soloButton:hover
 {
-        background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(180, 180, 180), stop:1 rgb(120, 120, 120));
     color: rgb(80, 80, 80);
 }
 
