--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -3,28 +3,13 @@ NinjamTrackView[horizontal="true"] #panSlider
     max-width: 50px;
 }
 
-NinjamTrackView[horizontal="true"] #buttonBoost
-{
-    padding: 1px;
-    border: 1px solid rgba(0, 0, 0, 30);
-    min-width: 12px;
-}
-
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoost
-{
-   border-left: 1px solid rgba(0, 0, 0, 10);
-   border-right: 1px solid rgba(0, 0, 0, 10);
-   margin: 0px;
-}
-
-NinjamTrackView[horizontal="true"] QPushButton#buttonBoost:hover:checked,
 NinjamTrackView[horizontal="true"] QPushButton#lowCutButton:hover:checked,
 NinjamTrackView[horizontal="true"] QPushButton#receiveButton:hover:checked,
 NinjamTrackView QPushButton#lowCutButton:hover:checked,
 NinjamTrackView QPushButton#receiveButton:hover:checked
 
 {
-    margin-top: -1px;
+    /*margin-top: -1px;*/
     background-color: rgb(229, 99, 24);
     border: none;
 }
