--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -1,3 +1,8 @@
+NinjamTrackView #receiveLabel
+{
+    color: rgba(255, 255, 255, 70);
+}
+
 NinjamTrackView #lowCutButton:checked
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(100, 100, 100), stop:1 rgb(80, 80, 80));
