--- a/src/Common/gui/chat/ChatPanel.ui
+++ b/src/Common/gui/chat/ChatPanel.ui
@@ -75,6 +75,9 @@
      <property name="horizontalScrollBarPolicy">
       <enum>Qt::ScrollBarAlwaysOff</enum>
      </property>
+     <property name="sizeAdjustPolicy">
+      <enum>QAbstractScrollArea::AdjustToContents</enum>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -84,14 +87,8 @@
         <x>0</x>
         <y>0</y>
         <width>235</width>
-        <height>16</height>
+        <height>300</height>
        </rect>
-      </property>
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
       </property>
      </widget>
     </widget>
