--- a/src/resources/jamtaba.qrc
+++ b/src/resources/jamtaba.qrc
@@ -126,6 +126,9 @@
         <file alias="qtbase_da.qm">../../translations/Qt/qtbase_da.qm</file>
     </qresource>
     <qresource prefix="/images">
+        <file>small_plus.png</file>
+        <file>small_minus.png</file>
+        <file>font_size.png</file>
         <file>webcam.png</file>
         <file>logo.png</file>
         <file>loop.png</file>
